--- a/index.html
+++ b/index.html
@@ -78,10 +78,21 @@
             pointer-events: none;
         }
 
-        /* UPDATED: Brainrot Item Highlight Effect */
+        /* UPDATED: Rainbow Animated Glow Effect */
+        @keyframes rainbow-glow {
+            0% { filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.8)) drop-shadow(0 0 15px rgba(255, 0, 0, 0.4)); }
+            15% { filter: drop-shadow(0 0 8px rgba(255, 127, 0, 0.8)) drop-shadow(0 0 15px rgba(255, 127, 0, 0.4)); }
+            30% { filter: drop-shadow(0 0 8px rgba(255, 255, 0, 0.8)) drop-shadow(0 0 15px rgba(255, 255, 0, 0.4)); }
+            45% { filter: drop-shadow(0 0 8px rgba(0, 255, 0, 0.8)) drop-shadow(0 0 15px rgba(0, 255, 0, 0.4)); }
+            60% { filter: drop-shadow(0 0 8px rgba(0, 0, 255, 0.8)) drop-shadow(0 0 15px rgba(0, 0, 255, 0.4)); }
+            75% { filter: drop-shadow(0 0 8px rgba(75, 0, 130, 0.8)) drop-shadow(0 0 15px rgba(75, 0, 130, 0.4)); }
+            90% { filter: drop-shadow(0 0 8px rgba(148, 0, 211, 0.8)) drop-shadow(0 0 15px rgba(148, 0, 211, 0.4)); }
+            100% { filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.8)) drop-shadow(0 0 15px rgba(255, 0, 0, 0.4)); }
+        }
+
         .brainrot-highlight {
-            filter: drop-shadow(0 0 15px rgba(255, 255, 255, 0.9)) drop-shadow(0 0 5px rgba(255, 215, 0, 0.8));
             transform: scale(1.1);
+            animation: rainbow-glow 2s linear infinite;
         }
 
         .gift-container.opened .reward-placeholder {
